--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-social-twitter')
+	compile 'org.webjars:materializecss:0.97.7'	
+	compile 'org.webjars:jquery:3.1.1-1'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
