--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.thymeleaf.cache=false
 
+server.port:3000
+
 spring.social.twitter.app-id=ifphDXP0qFsrlvxbJYLxu7ALJ
 spring.social.twitter.app-secret=dBkk3eGXSi0chlBJrYFWSeq4Qj1WE9ggRK1mztsMWRpsYfxl8h
