--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-social-twitter')
 	compile('org.webjars:materializecss:0.97.7')	
-	compile('org.webjars:jquery:3.1.1-1')
+	compile('org.webjars:jquery:3.1.1-1')		
+	compile('org.webjars:material-design-icons:3.0.1')
 	compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.1.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
