--- a/bin/application.properties
+++ b/bin/application.properties
@@ -8,3 +8,7 @@ server.port:3000
 
 spring.social.twitter.app-id=ifphDXP0qFsrlvxbJYLxu7ALJ
 spring.social.twitter.app-secret=dBkk3eGXSi0chlBJrYFWSeq4Qj1WE9ggRK1mztsMWRpsYfxl8h
+
+upload.pictures.uploadPath=file:./pictures
+upload.pictures.anonymousPicture=classpath:/images/anonymous.png
+
