custom upload error messages

--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,5 +1,3 @@
-spring.mvc.locale=en
-
 spring.thymeleaf.cache=false
 spring.messages.cache-seconds=0
 logging.level.org.springframework.web=DEBUG
@@ -11,3 +9,5 @@ spring.social.twitter.app-secret=dBkk3eGXSi0chlBJrYFWSeq4Qj1WE9ggRK1mztsMWRpsYfx
 
 upload.pictures.uploadPath=file:./pictures
 upload.pictures.anonymousPicture=classpath:/images/anonymous.png
+
+spring.http.multipart.max-file-size=1
