--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,9 @@
-import java.lang.invoke.LambdaForm.Compiled
-
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.BUILD-SNAPSHOT'
+		springBootVersion = '1.5.2.RELEASE'
 	}
 	repositories {
 		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -39,5 +35,6 @@ dependencies {
 	compile('org.webjars:jquery:3.1.1-1')		
 	compile('org.webjars:material-design-icons:3.0.1')
 	compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.1.2')
+	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
