--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,9 @@
+/application.properties
+/images/
 /masterSpringMvc/
+/master_spring_mvc/
+/messages.properties
+/messages_en.properties
+/messages_pl.properties
+/static/
+/templates/
