--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,8 @@ dependencies {
 	compile('org.webjars:material-design-icons:3.0.1')
 	compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.1.2')
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
+	compile('com.fasterxml.jackson.dataformat:jackson-dataformat-xml')
+	compile('io.springfox:springfox-swagger2:2.6.1')
+	compile('io.springfox:springfox-swagger-ui:2.6.1')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
