--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,14 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-social-twitter')
+	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.webjars:materializecss:0.97.7')	
 	compile('org.webjars:jquery:3.1.1-1')		
 	compile('org.webjars:material-design-icons:3.0.1')
-	compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.1.2')
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 	compile('com.fasterxml.jackson.dataformat:jackson-dataformat-xml')
 	compile('io.springfox:springfox-swagger2:2.6.1')
 	compile('io.springfox:springfox-swagger-ui:2.6.1')
+	compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
