--- a/bin/application.properties
+++ b/bin/application.properties
@@ -4,6 +4,8 @@ logging.level.org.springframework.web=DEBUG
 
 server.port:3000
 
+spring.session.store-type=none
+
 spring.social.twitter.app-id=ifphDXP0qFsrlvxbJYLxu7ALJ
 spring.social.twitter.app-secret=dBkk3eGXSi0chlBJrYFWSeq4Qj1WE9ggRK1mztsMWRpsYfxl8h
 
