--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-social-twitter')
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.boot:spring-boot-starter-data-redis')
+	compile('org.springframework.session:spring-session:1.3.0.RELEASE')	
 	compile('org.webjars:materializecss:0.97.7')	
 	compile('org.webjars:jquery:3.1.1-1')		
 	compile('org.webjars:material-design-icons:3.0.1')
