--- a/build.gradle
+++ b/build.gradle
@@ -74,3 +74,7 @@ task integrationTest(type : Test) {
 	classpath = sourceSets.integrationTest.runtimeClasspath
 	reports.html.destination = file("${reporting.baseDir}/integrationTests")
 }
+
+bootRun {
+	systemProperties = System.properties
+}
