--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.cache=false
 spring.messages.cache-seconds=0
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=info
 
 server.port:3000
 
