--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	compile('io.springfox:springfox-swagger2:2.6.1')
 	compile('io.springfox:springfox-swagger-ui:2.6.1')
 	compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
+	compile('org.webjars.npm:lodash:4.17.4')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('com.jayway.jsonpath:json-path')
 	testCompile('org.assertj:assertj-core:3.6.2')	
